[package]
name = "air-traffic-control"
version = "0.1.0"
description = "Solana validator proxy to simulate RPC traffic failures."
repository = "https://github.com/jet-lab/air-traffic-control"
readme = "https://github.com/jet-lab/air-traffic-control#readme"
license = "AGPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "atc"
path = "src/main.rs"

[features]
default = []

[profile.release]
opt-level = "s"

[dependencies]
actix-web = "4.0"
bs58 = "0.4"
env_logger = "0.9"
rand = "0.8"
reqwest = "0.11"
serde_json = "1.0"
tokio = "1.19"

[dev-dependencies]
actix-rt = "2.7"
